Corrigida configuração e implementado primeiros métodos do serviço
Corrigida configuração do liquibase, implementados método GET e cenários
de teste.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.jpa.database=ORACLE
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:bctst11g
-spring.datasource.username=sdbanco
-spring.datasource.password=sdbanco
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=system
+spring.datasource.password=oracle
 
 spring.jpa.show-sql=true
 
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 spring.liquibase.enabled=true
-spring.liquibase.url=jdbc:oracle:thin:@localhost:1521:bctst11g
-spring.liquibase.user=sdbanco
-spring.liquibase.password=sdbanco
+spring.liquibase.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.liquibase.user=system
+spring.liquibase.password=oracle
