--- a/pom.xml
+++ b/pom.xml
@@ -49,11 +49,17 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
 		<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc6</artifactId>
 			<version>11.2.0</version>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -68,11 +74,11 @@
 				<artifactId>liquibase-maven-plugin</artifactId>
 				<version>3.0.5</version>
 				<configuration>
-					<changeLogFile>src/main/resources/db.changelog-master.xml</changeLogFile>
+					<changeLogFile>src/main/resources/db/changelog/db.changelog-master.xml</changeLogFile>
 					<driver>oracle.jdbc.driver.OracleDriver</driver>
-					<url>jdbc:oracle:thin:@localhost:1521:bctst11g</url>
-					<username>sdbanco</username>
-					<password>sdbanco</password>
+					<url>jdbc:oracle:thin:@localhost:1521:xe</url>
+					<username>system</username>
+					<password>oracle</password>
 				</configuration>
 				<executions>
 					<execution>
