--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,20 @@
+# Configuração do JPA
 spring.jpa.database=ORACLE
+spring.jpa.show-sql=true
+
+# Configurações do Oracle
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:bctst11g
 spring.datasource.username=sdbanco
 spring.datasource.password=sdbanco
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
-spring.jpa.show-sql=true
-
+# Configuraçãoes do Liquibase
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 spring.liquibase.enabled=true
 spring.liquibase.url=jdbc:oracle:thin:@localhost:1521:bctst11g
 spring.liquibase.user=sdbanco
 spring.liquibase.password=sdbanco
+
+# Configuração do Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+logging.level.org.hibernate.SQL=debug
