--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ spring.liquibase.url=jdbc:oracle:thin:@localhost:1521:bctst11g
 spring.liquibase.user=sdbanco
 spring.liquibase.password=sdbanco
 
-# Configuração do Hibernate
+# Configurações do Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
-logging.level.org.hibernate.SQL=debug
+
+# Configurações do Jackson
+spring.jackson.deserialization.fail-on-unknown-properties=true
