--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -4,10 +4,12 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Configurações do Oracle
-spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.url=jdbc:h2:mem:test;Mode=Oracle
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.datasource.driver-class-name=org.h2.Driver
 
 # Configurações do Jackson
 spring.jackson.deserialization.fail-on-unknown-properties=true
+
+spring.liquibase.enabled=false
