--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.jpa.database=ORACLE
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+#spring.jpa.hibernate.ddl-auto=update
 
 # Configurações do Oracle
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:bctst11g
