--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.jpa.database=ORACLE
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
-spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.ddl-auto=update
 
 # Configurações do Oracle
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:bctst11g
@@ -12,7 +12,7 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # Configuraçãoes do Liquibase
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
 spring.liquibase.url=jdbc:oracle:thin:@localhost:1521:bctst11g
 spring.liquibase.user=sdbanco
 spring.liquibase.password=sdbanco
