Refatoração total do projeto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Configuração do contexto-path
+server.servlet.context-path=/livraria/api
+
 # Configuração do JPA
 spring.jpa.database=ORACLE
 spring.jpa.show-sql=true
