--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,20 +5,20 @@ server.servlet.context-path=/livraria/api
 spring.jpa.database=ORACLE
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
-# spring.jpa.hibernate.ddl-auto=update
+ spring.jpa.hibernate.ddl-auto=update
 
 # Configurações do Oracle
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:bctst11g
-spring.datasource.username=sdbanco
-spring.datasource.password=sdbanco
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=system
+spring.datasource.password=oracle
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # Configuraçãoes do Liquibase
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
-spring.liquibase.enabled=true
-spring.liquibase.url=jdbc:oracle:thin:@localhost:1521:bctst11g
-spring.liquibase.user=sdbanco
-spring.liquibase.password=sdbanco
+spring.liquibase.enabled=false
+spring.liquibase.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.liquibase.user=system
+spring.liquibase.password=oracle
 
 # Configurações do Jackson
 spring.jackson.deserialization.fail-on-unknown-properties=true
