Inclusão de autenticação com spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ logging.level.org.springframework.web=debug
 spring.jpa.database=ORACLE
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+spring.security.user.name=user
+spring.security.user.password=password
 # spring.jpa.hibernate.ddl-auto=update
 
 # Configurações do Oracle
