--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Configuração do contexto-path
 server.servlet.context-path=/livraria/api
 logging.level.org.springframework.web=debug
-#logging.level.org.hibernate=debug
+logging.level.org.hibernate=debug
 
 # Configuração do JPA
 spring.jpa.database=ORACLE
