--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,15 @@
-# Configuração do contexto-path
 server.servlet.context-path=/livraria/api
+
+spring.flyway.enabled=false
+spring.profiles.active=mysql
+
 logging.level.org.springframework.web=debug
 logging.level.org.hibernate=debug
 
-# Configuração do JPA
-spring.jpa.database=ORACLE
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 spring.security.user.name=user
 spring.security.user.password=password
-# spring.jpa.hibernate.ddl-auto=update
-
-# Configurações do Oracle
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:bctst11g
-spring.datasource.username=sdbanco
-spring.datasource.password=sdbanco
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-
-# Configuraçãoes do Liquibase
-spring.liquibase.enabled=true
-spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
-spring.liquibase.url=jdbc:oracle:thin:@localhost:1521:bctst11g
-spring.liquibase.user=sdbanco
-spring.liquibase.password=sdbanco
 
 # Configurações do Jackson
 spring.jackson.deserialization.fail-on-unknown-properties=true
+
+spring.jpa.database-platform=
