--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
 		</dependency>
 		
 		<dependency>
+		  <groupId>org.modelmapper</groupId>
+		  <artifactId>modelmapper</artifactId>
+		  <version>2.3.0</version>
+		</dependency>
+		<dependency>
 	        <groupId>org.mapstruct</groupId>
 	        <artifactId>mapstruct</artifactId>
 	        <version>1.3.0.Final</version>
