--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,17 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
+	
+	<dependencyManagement>
+        <dependencies>
+	        <dependency>
+			    <groupId>org.springframework.security</groupId>
+			    <artifactId>spring-security-test</artifactId>
+			    <version>5.1.4.RELEASE</version>		    
+			    <scope>test</scope>
+			</dependency>          
+        </dependencies>
+    </dependencyManagement>
 
 	<dependencies>
 		<dependency>
@@ -114,6 +125,14 @@
 			<artifactId>h2</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+<!-- 		<dependency> -->
+<!--   <groupId>org.testng</groupId> -->
+<!--   <artifactId>testng</artifactId> -->
+<!--   <version>6.8</version> -->
+<!--   <scope>test</scope> -->
+<!-- </dependency> -->
+		
 	</dependencies>
 
 	<build>
